# LMS-Python-Process

./: extracted_content.txt  pyproject.toml
lms/: __main__.py
lms/extraction/: pdf_extractor.py
lms/file_tester/: pdf_file_test.py
